# chessarena-client

./: LICENSE  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
arenachess/: __init__.py  api.py  cli.py  engine_runner.py  setup.py
examples/: make_move.py
